[package]
name = "kowalski"
version = "1.0.0"
edition = "2024"
description = "Kowalski: A Rust-based agent for interacting with Ollama models"
license = "MIT"
authors = ["yarenty <yarenty@gmail.com>"]
repository = "https://github.com/yarenty/kowalski"
homepage = "https://github.com/yarenty/kowalski"
readme = "README.md"
categories = [
    "network-programming",
    "text-processing",
    "science",
]
keywords = [
    "AI",
    "agent",
    "chat",
    "llm",
    "ollama",
]

[dependencies]
# Core components are non-optional
kowalski-core = { path = "../kowalski-core", version = "1.0.0" }

tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
reqwest = { workspace = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
toml = { workspace = true }

[lib]
name = "kowalski"
path = "src/lib.rs"

[features]
default = []

# Other features
cli = []
postgres = ["kowalski-core/postgres"]

# All features (CLI + PostgreSQL client stack)
full = ["cli", "postgres"]
